--- a/app/views/pages/profile_tips.html.erb
+++ b/app/views/pages/profile_tips.html.erb
@@ -1,8 +1,12 @@
-<div class="container">
-  <div class="header">
-    <h1>My Tips</h1>
+<div class="header">
+  <div class="title-avatar">
+    <h1>My tips</h1>
     <img src="<%= current_user.avatar %>" alt="">
   </div>
+  <p>Tips you need to remember! 📝 </p>
+</div>
+
+<div class="container">
 
   <div class="text-new-challenge">
     <h4><strong>My saved tips</strong></h4>
