--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,6 +1,8 @@
-<h1><%= Challenge.find(@booking.challenge_id).name %></h1>
-
-
+<div class="header-no-avatar">
+  <div class="title-no-avatar">
+    <h2><%= Challenge.find(@booking.challenge_id).name %></h2>
+  </div>
+</div>
 
 <ul>
   <li><p>Category: <%= Challenge.find(@booking.challenge_id).category %></p></li>
