--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -1,5 +1,10 @@
+<div class="header-no-avatar">
+  <div class="title-no-avatar">
+    <h2><%= @challenge.name%></h2>
+  </div>
+</div>
+
 <div class="container-nav">
-  <h1 class="text-center pt-3"><%= @challenge.name%></h1>
   <ul class="ultips">
     <li>
       <p>category: <%= @challenge.category %></p>
