🌰 cool new buttons for the search 🌰

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -18,7 +18,7 @@
 
 .btn-grad {
   background-image: linear-gradient(to right, #115540 0%, #237A57  51%, #115540  100%);
-  margin-top: 10px;
+  // margin-top: 10px;
   padding: 10px 20px;
   text-align: center;
   // transition: 0.5s;
