--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "components/index";
 @import "pages/index";
 @import "challenges/index";
+@import "seniorities/index";
 
 .view {
   height: 778px;
