--- a/app/views/shared/_navbar_eco.html.erb
+++ b/app/views/shared/_navbar_eco.html.erb
@@ -15,7 +15,7 @@
           <% end %>
         </li>
         <li class="nav-item me-3 me-lg-0">
-          <%= link_to tipsindex_path, class: "nav-link #{'current-page' if action_name == 'tipsindex'}" do %>
+          <%= link_to profile_tips_path, class: "nav-link #{'current-page' if action_name == 'profile_tips'}" do %>
             <i class="fa-regular fa-lightbulb"></i>
           <% end %>
         </li>
