--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,4 +10,5 @@
 @import "navbar_eco";
 @import "font";
 @import "header";
-@import "container_nav"
+@import "container_nav";
+@import "custom_form"
