--- a/app/views/pages/tipsindex.html.erb
+++ b/app/views/pages/tipsindex.html.erb
@@ -1,13 +1,12 @@
-<div class="container" data-controller="search-tips">
-  <div class="header">
-
+<div class="header">
+  <div class="title-avatar">
     <h1>All tips</h1>
     <%= image_tag current_user.avatar %>
   </div>
   <p>Find the perfect tips 💡 to complete your challenges</p>
 </div>
 
-<div class="container">
+<div class="container" data-controller="search-tips">
 
   <div id="search">
     <%= simple_form_for :search, url: tipsindex_path, method: :get, html: {
@@ -34,7 +33,7 @@
       <%= submit_tag "Search", class: "btn btn-grad search-btn" %><% end %>
     </div>
   </div>
-  
+
   <br>
 
   <ul class="ultips" data-search-tips-target="list">
