form create a tip wip

--- a/app/views/usertips/new.html.erb
+++ b/app/views/usertips/new.html.erb
@@ -1,15 +1,17 @@
 <div class="container">
+  <div class="header">
+      <h1>Create a new tip</h1>
+  </div>
   <div class="custom-form">
-    <h1>Create a new tip</h1>
+    <%= simple_form_for(@usertip) do |f| %>
       <div class="form-inputs">
-        <%= simple_form_for(@usertip) do |f| %>
-        <%= f.input :name %>
-        <%= f.input :description %>
+        <%= f.input :name, autofocus: true, placeholder: "Bob" %>
+        <%= f.input :description, placeholder: "Describe your tip" %>
         <%= f.input :booking_id, prompt: "Choose among your challenge", collection: @bookings.map{ |booking| [booking.id, booking.challenge.name] }, label_method: :second, value_method: :first %>
       </div>
       <div class="form-validate">
-        <%= f.submit class:'btn-grad' %>
+        <%= f.submit class:'btn-grad mt-4' %>
       </div>
-      <% end %>
+    <% end %>
   </div>
 </div>
