--- a/app/assets/stylesheets/components/_custom_form.scss
+++ b/app/assets/stylesheets/components/_custom_form.scss
@@ -17,3 +17,15 @@
   border-color: #7D9E7F;
   box-shadow: 0 0 0 0.2rem rgba(130, 159, 137, 0.25);
 }
+
+.name:focus {
+  color: #7D9E7F;
+  border-color: #7D9E7F;
+  box-shadow: 0 0 0 0.2rem rgba(130, 159, 137, 0.25);
+}
+
+.description:focus {
+  color: #7D9E7F;
+  border-color: #7D9E7F;
+  box-shadow: 0 0 0 0.2rem rgba(130, 159, 137, 0.25);
+}
