accordeon and buttons bottom on my tips

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -39,3 +39,15 @@
   background-color: #115540;
   border-color: #115549;
   }
+
+.btn-sticky-tips {
+  position: fixed;
+  bottom: 50px;
+  background-color: white;
+  padding: 0.5rem;
+}
+
+.btn-create-tips {
+  font-size: 1rem;
+  justify-content: space-around;
+}
