--- a/app/assets/stylesheets/pages/_form_eco.scss
+++ b/app/assets/stylesheets/pages/_form_eco.scss
@@ -3,6 +3,18 @@ a {
   color: gray;
 }
 
+.up-nav {
+  position: fixed;
+  bottom: 40px;
+  background-color: white;
+}
+
+.up-nav2 {
+  position: fixed;
+  bottom: 70px;
+  background-color: white;
+}
+
 .tag-item {
   display: inline-block;
 }
