--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-form">
   <ul class="list-inline">
     <%= simple_form_for [@challenge, @booking], html:{class: "d-flex align-items-center"} do |f| %>
     <li class="list-inline-item">
