--- a/app/assets/stylesheets/pages/_form_eco.scss
+++ b/app/assets/stylesheets/pages/_form_eco.scss
@@ -5,13 +5,13 @@ a {
 
 .up-nav {
   position: fixed;
-  bottom: 40px;
+  bottom: 3.9rem;
   background-color: white;
 }
 
 .up-nav2 {
   position: fixed;
-  bottom: 70px;
+  bottom: 3.9rem;
   background-color: white;
 }
 
@@ -42,7 +42,7 @@ a {
 }
 
 #search .form-control {
-  border-radius: 1.5rem 0 0 1.5rem;
+  border-radius: 1.5rem;
   background-color:#a3baa34a;
   border: none;
   height: 2.6rem;
