--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -88,13 +88,14 @@
       <% if policy(@booking).edit? %>
         <%= render "bookings/form", bookings: @booking %>
       <% end %>
+      <div class="remove-challenge">
       <% if policy(@booking).destroy? %>
       <i class="fa-regular fa-trash-can"></i>
         <%= link_to 'Remove this challenge', booking_path(@booking), data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'} %>
       <% end %>
+      </div>
     <% else %>
       <%= link_to "Redo this challenge", challenge_path(@retry_challenge) %>
     <% end %>
   </div>
-
 </div>
