--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -4,19 +4,17 @@
   </div>
 </div>
 
-<div class="container-nav">
-  <ul class="ultips">
-    <li>
-      <p>category: <%= @challenge.category %></p>
-    </li>
-    <li>
-      <p>description: <%= @challenge.description %></p>
-    </li>
-  </ul>
+<div class="container">
+  <div class="mt-3 head">
+    <div class="<%= @challenge.category.downcase %>-icon icons details">
+      <i class="fa-solid <%= find_icon(@challenge.category) %> top-icon"></i>
+      <p><%= @challenge.description %></p>
+    </div>
+  </div>
 
   <h4>Need some tips</h4>
 
-  <ul class="ultips">
+  <ul class="mt-3 ps-0">
     <% @tips.each do |tip| %>
     <div class="cardtips">
       <a class="tipsimage" href="#">
@@ -40,7 +38,7 @@
     </div>
     <% end %>
   </ul>
-  <ul class="ultips">
+  <ul class="mt-3 ps-0">
     <% @all_saved_tips.each do |saved_tip| %>
     <div class="cardtips">
       <a class="tipsimage" href="#">
