--- a/app/assets/stylesheets/components/_container_nav.scss
+++ b/app/assets/stylesheets/components/_container_nav.scss
@@ -1,5 +1,9 @@
 .container-nav {
-  margin-bottom: 100px;
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+  padding-bottom: 70px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .container-form {
