--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -6,7 +6,7 @@
   <p>Choose some challenges for this week</p>
 </div>
 
-<div class="container">
+<div class="container-nav">
   <section class="challenges">
     <% @challenges.each do |challenge| %>
       <% if current_user.bookings.where(challenge_id: challenge.id).empty? %>
