--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<div class='container'>
+<div class='container-nav'>
   <div class="home-title">
     <h1>How it works</h1>
   </div>
