--- a/app/views/pages/profile_challenge.html.erb
+++ b/app/views/pages/profile_challenge.html.erb
@@ -63,6 +63,6 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container-nav">
     <%= link_to "Add new challenges", challenges_path, class: "btn-grad" %>
 </div>
