petit changements esthétiques

--- a/app/assets/stylesheets/components/_container_nav.scss
+++ b/app/assets/stylesheets/components/_container_nav.scss
@@ -1,6 +1,7 @@
 .container-nav {
   padding-right: 0.75rem;
   padding-left: 0.75rem;
+  padding-top: 1rem;
   padding-bottom: 70px;
   margin-right: auto;
   margin-left: auto;
