--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -145,3 +145,12 @@
 .daily-tips h2 p {
   margin: 0;
 }
+
+.fa-lightbulb-exclamation {
+  color: white;
+}
+
+section.challenges {
+  margin: 0px;
+  padding-top: 1rem;
+}
