--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,7 +42,7 @@
       <div class="carousel-item">
         <img src="/assets/tips.svg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-md-block">
-          <h5>Get dayly tips</h5>
+          <h5>Get daily tips</h5>
         </div>
       </div>
     </div>
