finished tip cards expanding on click

--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -1,5 +1,5 @@
 h1 {
-  font-size: 32px;
+  font-size: 2rem; // 32px;
   font-family: 'Poppins', sans-serif;
   color:#115549;
 }
@@ -7,5 +7,5 @@ h1 {
 p {
   font-family: 'Open Sans', sans-serif;
   color: rgb(50, 50, 50);
-  font-size: 16px;
+  font-size: 1rem; //16px;
 }
