--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -13,7 +13,7 @@
 
 <h4>Need some tips</h4>
 
-<div>
+<div data-controller="tips-card">
   <h1 class="text-center pt-3"><%= Challenge.find(@booking.challenge_id).name %></h1>
   <ul class="ultips">
     <li>
@@ -48,7 +48,7 @@
           <% end %>
         <% end %>
       </div>
-      <p class="padding-right"><%= tip.description.truncate(40) %></p>
+      <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= tip.description %></p>
       </li>
     </div>
     <% end %>
@@ -68,7 +68,7 @@
               <i class="fa fa-bookmark"></i>
             <% end %>
           </div>
-          <p class="padding-right"><%= saved_tip.tip.description.truncate(40) %></p>
+          <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= saved_tip.tip.description %></p>
         <% else saved_tip.class == SavedUserTip %>
           <div class="info d-flex justify-content-between">
             <h5><strong><%= saved_tip.usertip.name %></strong><br></h5>
@@ -76,7 +76,7 @@
               <i class="fa fa-bookmark"></i>
             <% end %>
           </div>
-          <p class="padding-right"><%= saved_tip.usertip.description.truncate(40) %><br></p>
+          <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= saved_tip.usertip.description %><br></p>
         <% end %>
       </li>
     </div>
