--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<div class="container-nav">
+<div class="container-nav" data-controller="tips-card">
   <ul class="ultips">
     <li>
       <p>category: <%= @challenge.category %></p>
@@ -23,19 +23,19 @@
         <i class="fa-solid fa-utensils"></i>
       </a>
       <li>
-      <div class="info d-flex justify-content-between">
-        <h5><strong><%= tip.name %></strong><br></h5>
-        <% if tip.class == Tip %>
-          <%= link_to tip_saved_tips_path(tip), data: {turbo_method: :post}, class:"tipsicon mt-2 me-2" do %>
-            <i class="fa-regular fa-bookmark"></i>
+        <div class="info d-flex justify-content-between">
+          <h5><strong><%= tip.name %></strong><br></h5>
+          <% if tip.class == Tip %>
+            <%= link_to tip_saved_tips_path(tip), data: {turbo_method: :post}, class:"tipsicon mt-2 me-2" do %>
+              <i class="fa-regular fa-bookmark"></i>
+            <% end %>
+          <% else tip.class == Usertip %>
+            <%= link_to usertip_saved_user_tips_path(tip), data: {turbo_method: :post}, class:'tipsicon mt-2 me-2' do %>
+              <i class="fa-regular fa-bookmark"></i>
+            <% end %>
           <% end %>
-        <% else tip.class == Usertip %>
-          <%= link_to usertip_saved_user_tips_path(tip), data: {turbo_method: :post}, class:'tipsicon mt-2 me-2' do %>
-            <i class="fa-regular fa-bookmark"></i>
-          <% end %>
-        <% end %>
-      </div>
-      <p class="padding-right"><%= tip.description.truncate(40) %></p>
+        </div>
+        <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= tip.description %></p>
       </li>
     </div>
     <% end %>
@@ -54,7 +54,7 @@
             <i class="fa fa-bookmark"></i>
           <% end %>
         </div>
-        <p class="padding-right"><%= saved_tip.tip.description.truncate(40) %></p>
+        <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= saved_tip.tip.description %></p>
       <% else saved_tip.class == SavedUserTip %>
         <div class="info d-flex justify-content-between">
           <h5><strong><%= saved_tip.usertip.name %></strong><br></h5>
@@ -62,7 +62,7 @@
             <i class="fa fa-bookmark"></i>
           <% end %>
         </div>
-        <p class="padding-right"><%= saved_tip.usertip.description.truncate(40) %></p>
+        <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= saved_tip.usertip.description %></p>
       <% end %>
       </li>
     </div>
