header my different des autres

--- a/app/views/pages/profile_challenge.html.erb
+++ b/app/views/pages/profile_challenge.html.erb
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header header-green">
   <div class="title-avatar">
     <h1>My challenges</h1>
     <img src="<%= current_user.avatar %>" alt="">
