--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,6 +1,7 @@
 .header {
   padding-right: 0.75rem;
   padding-left: 0.75rem;
+  padding-top: 0.75rem;
   border-bottom: solid 2px;
   border-color: #115549;
 }
@@ -9,10 +10,22 @@
   margin: 0.5rem;
 }
 
+.header-green {
+  background-color: #115549;
+}
+
+.header-green h1 {
+  color: white;
+}
+
+.header-green p {
+  color: white;
+}
+
 .title-avatar {
   display: flex;
   justify-content: space-between;
-  margin: 0.5rem;
+  margin: 0 0.5rem 0.5rem 0.5rem;
 }
 
 .title-avatar img {
